[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/TutorialFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Sprites/Icons/Keyboard&Mouse/Dark/Space_Key_Dark.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/UI.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Icons/Keyboard&Mouse/Dark/Shift_Alt_Key_Dark.png" type="Texture" id=4]
[ext_resource path="res://Sprites/lightning.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Icons/Keyboard&Mouse/Dark/F_Key_Dark.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.498039, 0.894118, 0.388235, 1 )
border_width_top = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.192157, 0.192157, 0.192157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.972549, 0.211765, 0.211765, 1 )
border_width_top = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1

[node name="UI" type="CanvasLayer"]
script = ExtResource( 3 )
initial_color = Color( 0.498039, 0.894118, 0.388235, 1 )

[node name="EnergyBar" type="ProgressBar" parent="."]
margin_left = 170.0
margin_top = 68.0
margin_right = 561.0
margin_bottom = 108.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 40.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverloadBar" type="ProgressBar" parent="."]
margin_left = 170.0
margin_top = 123.0
margin_right = 561.0
margin_bottom = 163.0
rect_scale = Vector2( 0.3, 0.20079 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.498039, 0.894118, 0.388235, 1 )
margin_left = 78.0
margin_top = 55.0
margin_right = 142.0
margin_bottom = 119.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpTutorial" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="JumpTutorial"]
margin_left = 177.0
margin_top = 481.0
margin_right = 234.0
margin_bottom = 521.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="JumpTutorial"]
margin_left = 297.0
margin_top = 510.0
margin_right = 451.0
margin_bottom = 608.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Jump
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldJump" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HoldJump"]
margin_left = 307.0
margin_top = 481.0
margin_right = 407.0
margin_bottom = 581.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HoldJump"]
margin_left = 191.0
margin_top = 510.0
margin_right = 345.0
margin_bottom = 608.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Hold
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dash" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Dash"]
margin_left = 177.0
margin_top = 481.0
margin_right = 234.0
margin_bottom = 521.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Dash"]
margin_left = 297.0
margin_top = 510.0
margin_right = 625.0
margin_bottom = 646.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Dash

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Switch" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Switch"]
margin_left = 177.0
margin_top = 481.0
margin_right = 234.0
margin_bottom = 521.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Switch"]
margin_left = 297.0
margin_top = 510.0
margin_right = 625.0
margin_bottom = 646.0
custom_fonts/normal_font = ExtResource( 1 )
text = "On/Off

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoubleJumpTutorial" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DoubleJumpTutorial"]
margin_left = 177.0
margin_top = 481.0
margin_right = 234.0
margin_bottom = 521.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="DoubleJumpTutorial"]
margin_left = 302.0
margin_top = 481.0
margin_right = 402.0
margin_bottom = 581.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="ColorTimer" to="." method="_on_ColorTimer_timeout"]
